[workspace]
members = ["contracts/cw-cyber-subgraph", "contracts/cw-cyber-passport", "contracts/cw-cyber-airdrop"]

[profile.release.package.cw-cybergift]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
