[package]
name = "cw-cyber-airdrop"
version = "0.0.1"
authors = ["CyberHead"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.4
"""

[dependencies]
anyhow = "1"
cw0 = "0.10.3"
cw2 = "0.11"
cw20 = "0.11"
cosmwasm-std = { version = "1.0.0-beta" }
cw-utils = { version = "0.11.0" }
#cosmwasm-crypto = { version = "1.0.0-beta" }
cw-cyber-passport = { path = "../cw-cyber-passport" }
cw-storage-plus = "0.10"
schemars = "0.8.3"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.27" }
hex = "0.4"
sha2 = { version = "0.9.5", default-features = false }
sha3 = "0.9"
serde_json = "1.0"
cosmwasm-schema = "1.0.0-beta"
base64 = "0.13"
