[package]
name = "cw-cyber-passport"
version = "0.0.1"
authors = ["CyberHead"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
  "artifacts/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.4
"""

[dependencies]
cosmwasm-std = { version = "1.0.0-beta8" }
cosmwasm-storage = { version = "1.0.0-beta8" }
cw-storage-plus = "0.13.2"
cw2 = "0.13.2"
cw721 = { version = "0.13.2" }
schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.26" }
cid = "0.7.0"
cyber-std = { version = "0.2.0" }
cw-cyber-subgraph = { path = "../cw-cyber-subgraph" }
cw-utils = { version = "0.13.2" }
hex = "0.4"
sha2 = { version = "0.9.5", default-features = false }
sha3 = "0.9"
bech32 = "0.8.1"
cw721-base = { version = "0.13.2", features = ["library"] }
primitive-types = {version = "0.10.1", default-features = false, features = ["byteorder"]}
ripemd160 = "0.9.1"
base64 = "0.13"
semver = "1"

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta8" }

