[package]
name = "cw-cyber-subgraph"
version = "1.0.0"
authors = ["CyberHead"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
incremental = false
panic = 'abort'

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
anyhow = "1"
cw2 = "0.13.4"
cosmwasm-std = { version = "1.0.0" }
cyber-std = { version = "0.2.1" }
cw-storage-plus = "0.13.4"
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
semver = "1"

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }
